--- a/conky_new.conf
+++ b/conky_new.conf
@@ -1,7 +1,7 @@
 conky.config = {
 	background = true,
 	use_xft = true,
-	font = 'Droid Sans:style=Bold:size=8',
+	font = 'Liberation Sans:style=Bold:size=8',
 	xftalpha = 1,
 
 	update_interval = 1,
@@ -10,9 +10,10 @@ conky.config = {
     own_window = true,
 	own_window_type = 'normal',
     own_window_class = 'conky-semi',
-    own_window_argb_value = 0,
+	own_window_colour = '#1c1c1c',
+    own_window_argb_value = 175,
     own_window_argb_visual = true,
-    own_window_transparent = true,
+    own_window_transparent = false,
 	own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
 	double_buffer = true,
 	
@@ -34,32 +35,36 @@ conky.config = {
 	uppercase = false,
 	
     cpu_avg_samples = 2,
-    override_utf8_locale = false
+    override_utf8_locale = true
 };
 
 conky.text = [[
+${hr 2}
+${font Droid Sans:bold:size=16} ${alignc} ${time %F} ${font}
+${font Droid Sans:bold:size=16} ${alignc} ${time %H:%M} ${font}
 System Info ${hr 2 }
-
 Host: $nodename 
 Kernel: $sysname $kernel
 Uptime: $uptime
-Load: $loadavg
+#Load: $loadavg
 
-CPU: Intel 5200u @ ${freq_g} GHz
-Core 1: ${cpubar cpu1 6,160}  ${cpu cpu1}%
-Core 2: ${cpubar cpu2 6,160}  ${cpu cpu2}%
-Core 3: ${cpubar cpu3 6,160}  ${cpu cpu3}%
-Core 4: ${cpubar cpu4 6,160}  ${cpu cpu4}%
+CPU: Intel Core i5 5200U @ ${freq_g} GHz
+Core 1: ${cpugraph cpu1 6,100}  ${cpu cpu1}% ${hwmon 3 temp 2}ºC
+Core 2: ${cpugraph cpu2 6,100}  ${cpu cpu2}% ${hwmon 3 temp 3}ºC
+Core 3: ${cpugraph cpu3 6,100}  ${cpu cpu3}% 
+Core 4: ${cpugraph cpu4 6,100}  ${cpu cpu4}%
 
-CPU load$alignr ${cpu cpu0}%
-${cpubar cpu0}
-
-${cpugraph 000000 ffffff}
-
+#CPU load$alignr ${cpu cpu0}%
+#${cpubar cpu0}
+#${cpugraph 000000 ffffff}
 Memory ${hr 2}
 
 MEM $alignc $mem / $memmax $alignr $memperc%
 $membar
+
+Battery ${hr 2}
+$alignr $battery_time $battery_percent% 
+$battery_bar
 
 Top Processes ${hr 2}
 #$processes processes
@@ -78,6 +83,6 @@ Data: ${fs_used /mnt/Data}/${fs_size /mnt/Data}
 ${alignc} ${fs_bar 6,200 /mnt/Data}
 
 wlp3s0 ${hr 2}
-Up:          ${upspeed wlp3s0}
-Down:    ${downspeed wlp3s0}
+Up:      ${upspeed wlp3s0}
+Down: ${downspeed wlp3s0}
 ]];
