--- a/.conky/conky_laptop.conf
+++ b/.conky/conky_laptop.conf
@@ -1,83 +1,99 @@
-conky.config ={
-    update_interval = 1,
-    total_run_times = 0,
-    net_avg_samples = 1,
-    cpu_avg_samples = 1,
-    if_up_strictness = link,
-
-    imlib_cache_size = 0,
-    double_buffer = true,
-    no_buffers = true,
-
-    format_human_readable,
-
-
-    use_xft = true,
-    font = 'Montserrat Regular:size=8',
-    xftalpha = 0.2,
-    override_utf8_locale = true,
-    text_buffer_size = 2048,
-
-
+conky.config = {
+	background = true,
+	use_xft = true,
+	font = 'Droid Sans:style=bold:size=8',
+	xftalpha = 1,
+	format_human_readable = true,
+	update_interval = 1,
+	total_run_times = 0,
+	
     own_window = true,
-    own_window_argb_value = 200,
+	own_window_type = 'normal',
+    own_window_class = 'Conky',
+    own_window_colour = '282828',
+	own_window_argb_value = 180,
     own_window_argb_visual = true,
-    own_window_class = 'conky-semi',
-    own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
-    own_window_transparent = true,
-    -- own_window_transparent = false,
-    own_window_type = 'normal',
-    -- own_window_type = 'desktop',
-
-    alignment = 'top_right',
-    gap_x = 25,
-    gap_y = 40,
-    minimum_width = 182,
-    minimum_height = 600,
-    maximum_width = 182,
-
-    -- default_bar_size = 60 8,
-
-    draw_shades = no,
-    default_color = cccccc,
-    color0 = white,
-    color1 = FFFFFF,
-    color2 = white,
-    color3 = FFFFFF,
+    own_window_transparent = false,
+	own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
+	double_buffer = true,
+	
+    minimum_width = 200,
+	maximum_width = 200,
+	draw_shades = true,
+	draw_outline = false,
+	draw_borders = false,
+	draw_graph_borders = true,
+	
+    default_color = 'grey',
+	default_shade_color = 'black',
+	--default_outline_color = 'grey',
+	alignment = 'top_right',
+	
+    gap_x = 15,
+	gap_y = 40,
+	no_buffers = true,
+	uppercase = false,
+	
+    cpu_avg_samples = 2,
+    override_utf8_locale = true
 };
 
 conky.text = [[
+Time ${hr 2}
 
-${font Liberation Sans:style=Bold:size=8}SYSTEM $stippled_hr${font}
+${font Droid Sans:style=bold:size=14}${alignc}${time %a}, ${time %d/%m/%y}, ${time %H:%M} ${font}
 
-${color0}${voffset 8}${offset 4}${font ConkyColorsLogos:size=9}o${font}${color}${voffset -16}
-${color0}${font ConkyColors:size=16}b${font}${color}
-${goto 32}${voffset -23}Kernel: ${alignr}${color2}${kernel}${color}
-${goto 32}Uptime: ${alignr}${color2}${uptime}${color}
+System Info ${hr 2 }
 
-${voffset 4}${color0}${font ConkyColors:size=16}c${font}${offset -20}${voffset 6}${cpubar cpu0 4,17}${color}${voffset -16}${goto 32}CPU1: ${font Liberation Sans:style=Bold:size=8}${color1}${cpu cpu1}%${color}${font} ${alignr}${color2}${cpugraph cpu1 8,60 FFFFFF}${color}
-${goto 32}CPU2: ${font Liberation Sans:style=Bold:size=8}${color1}${cpu cpu2}%${color}${font} ${alignr}${color2}${cpugraph cpu2 8,60 FFFFFF}${color}
-${goto 32}CPU3: ${font Liberation Sans:style=Bold:size=8}${color1}${cpu cpu3}%${color}${font} ${alignr}${color2}${cpugraph cpu3 8,60 FFFFFF}${color}
-${goto 32}CPU4: ${font Liberation Sans:style=Bold:size=8}${color1}${cpu cpu4}%${color}${font} ${alignr}${color2}${cpugraph cpu4 8,60 FFFFFF}${color}
+Host: $nodename
+Distro: ${exec lsb_release -d | cut -f 2}
+Release: ${exec lsb_release -rs}
+Kernel: $sysname $kernel
+Uptime: $uptime
+#Load: $loadavg
 
-${voffset 2}${color0}${font ConkyColors:size=15}g${font}${color}${goto 32}${voffset -7}RAM: ${font Liberation Sans:style=Bold:size=8}${color1}$memperc%${color}${font}
-${offset 1}${color0}${membar 4,17}${color}${goto 32}F: ${font Liberation Sans:style=Bold:size=8}${color2}${memeasyfree}${color}${font} U: ${font Liberation Sans:style=Bold:size=8}${color2}${mem}${color}${font}
+CPU: Intel Core i5 5200U @ ${freq_g} GHz
+Core 1: ${cpugraph cpu1 6,100}  ${cpu cpu1}% ${hwmon 3 temp 2}ºC
+Core 2: ${cpugraph cpu2 6,100}  ${cpu cpu2}% ${hwmon 3 temp 3}ºC
+Core 3: ${cpugraph cpu3 6,100}  ${cpu cpu3}% 
+Core 4: ${cpugraph cpu4 6,100}  ${cpu cpu4}%
 
-${if_existing /sys/class/power_supply/BAT0}${color0}${font ConkyColors:size=15}6${font}${color}${goto 32}${voffset -6}Battery: ${font Liberation Sans:style=Bold:size=8}${color1}${battery_percent BAT0}%${color}${font} ${alignr}${color2}${battery_bar 8,60 BAT0}${color}${else}${color0}${font ConkyColors:size=15}6${font}${color}${goto 32}${voffset -6}Battery: ${font Liberation Sans:style=Bold:size=8}${color2}Unknown Status${color}${font}${endif}
+#CPU load$alignr ${cpu cpu0}%
+#${cpubar cpu0}
+#${cpugraph 000000 ffffff}
+Memory ${hr 2}
 
-${voffset 4}${color0}${font ConkyColors:size=16}C${font}${color}${goto 32}${voffset -10}Processes: ${color2}${alignr 13}CPU${alignr}RAM${color}
-${voffset -1}${goto 42}${color2}${top name 1}${color}${font Liberation Sans:style=Bold:size=8}${color1} ${goto 126}${top cpu 1}${alignr }${top mem 1}${color}${font}
-${voffset -1}${goto 42}${color2}${top name 2}${color}${font Liberation Sans:style=Bold:size=8}${color1} ${goto 126}${top cpu 2}${alignr }${top mem 2}${color}${font}
-${voffset -1}${goto 42}${color2}${top name 3}${color}${font Liberation Sans:style=Bold:size=8}${color1} ${goto 126}${top cpu 3}${alignr }${top mem 3}${color}${font}
-${voffset -1}${goto 42}${color2}${top name 4}${color}${font Liberation Sans:style=Bold:size=8}${color1} ${goto 126}${top cpu 4}${alignr }${top mem 4}${color}${font}
-${voffset -1}${goto 42}${color2}${top name 5}${color}${font Liberation Sans:style=Bold:size=8}${color1} ${goto 126}${top cpu 5}${alignr }${top mem 5}${color}${font}
+Min / Max $alignr $mem / $memmax
+${membar 6, 160} $alignr$memperc%
 
-${voffset 4}${font Liberation Sans:style=Bold:size=8}DATE $stippled_hr${font}
-${voffset -2}${alignc 38}${color2}${font Liberation Sans:style=Bold:size=30}${time %H:%M}${font}${color}
-${alignc}${time %d %B %Y}
+Battery ${hr 2}
+ 
+${if_match 100==$battery_percent}$alignr Full $endif${if_match 100>$battery_percent}$battery_status $alignr $battery_time$endif
+${battery_bar 6,160} $alignr$battery_percent%
 
-${voffset -2}${color0}${font ConkyColors:size=15}D${font}${voffset -8}${font Liberation Sans:style=Bold:size=7}${offset -17}${voffset 4}${time %d}${font}${color}${voffset -1}${font Liberation Mono:size=7}${execpi 300 DJS=`date +%_d`; cal -m|sed '2,8!d'| sed '/./!d' | sed 's/^/${goto 42} /'| sed 's/$/ /' | sed 's/^/ /' | sed /" $DJS "/s/" $DJS "/" "'${font Liberation Sans:style=Bold:size=8}${voffset -2}${offset -4}${color1} '"$DJS"'${color}${font Liberation Mono:size=7}'" "/}${voffset -1}
+Top Processes ${hr 2}
+#$processes processes
 
-${voffset 4}${font Liberation Sans:style=Bold:size=8}HD $stippled_hr${font}
-${execpi 30 /usr/local/share/conkycolors/bin/conkyHD2}
+PROCESS ${alignr} CPU  MEM
+${top name 1} $alignr ${top cpu 1} ${top mem 1}
+${top name 2} $alignr ${top cpu 2} ${top mem 2}
+${top name 3} $alignr ${top cpu 3} ${top mem 3}
+${top name 4} $alignr ${top cpu 4} ${top mem 4}
+${top name 5} $alignr ${top cpu 5} ${top mem 5}
+
+Storage ${hr 2}
+
+Home: $alignr${fs_used /home} / ${fs_size /home}
+${fs_bar 6,160 /home} $alignr${fs_used_perc /home}%
+Data: $alignr${fs_used /mnt/Data} / ${fs_size /mnt/Data}
+${fs_bar 6,160 /mnt/Data} $alignr${fs_used_perc /mnt/Data}%
+
+wlp3s0 ${hr 2}
+
+Download:$alignr${downspeed wlp3s0}
+${downspeedgraph wlp3s0 10,200}
+Upload: $alignr${upspeed wlp3s0}
+${upspeedgraph wlp3s0 10,200} 
+
 ]];
+
