new conky_laptop

--- a/.conky/conky_laptop.conf
+++ b/.conky/conky_laptop.conf
@@ -1,7 +1,7 @@
 conky.config = {
 	background = true,
 	use_xft = true,
-	font = 'Droid Sans:style=bold:size=8',
+	font = 'Droid Sans:style=bold:size=9',
 	xftalpha = 1,
 	format_human_readable = true,
 	update_interval = 1,
@@ -17,8 +17,8 @@ conky.config = {
 	own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
 	double_buffer = true,
 	
-    minimum_width = 200,
-	maximum_width = 200,
+    minimum_width = 260,
+	maximum_width = 260,
 	draw_shades = true,
 	draw_outline = false,
 	draw_borders = false,
@@ -41,22 +41,23 @@ conky.config = {
 conky.text = [[
 Time ${hr 2}
 
-${font Droid Sans:style=bold:size=14}${alignc}${time %a}, ${time %d/%m/%y}, ${time %H:%M} ${font}
+${font Droid Sans:style=bold:size=16}${alignc}${time %a}, ${time %d/%m/%y}, ${time %H:%M} ${font}
 
 System Info ${hr 2 }
 
 Host: $nodename
-Distro: ${exec lsb_release -d | cut -f 2}
+Distro: ${exec lsb_release -i | cut -f 2}
+#Distro: ${exec lsb_release -d | cut -f 2}
 Release: ${exec lsb_release -rs}
 Kernel: $sysname $kernel
 Uptime: $uptime
 #Load: $loadavg
 
-CPU: Intel Core i5 5200U @ ${freq_g} GHz
-Core 1: ${cpugraph cpu1 6,100}  ${cpu cpu1}% ${hwmon 3 temp 2}ºC
-Core 2: ${cpugraph cpu2 6,100}  ${cpu cpu2}% ${hwmon 3 temp 3}ºC
-Core 3: ${cpugraph cpu3 6,100}  ${cpu cpu3}% 
-Core 4: ${cpugraph cpu4 6,100}  ${cpu cpu4}%
+CPU: Intel Core i7-4710MQ @ ${freq_g} GHz
+Core 1: ${cpugraph cpu1 6,130}  $alignr${cpu cpu1}% ${hwmon 3 temp 2}ºC
+Core 2: ${cpugraph cpu2 6,130}  $alignr${cpu cpu2}% ${hwmon 3 temp 3}ºC
+Core 3: ${cpugraph cpu3 6,130}  $alignr${cpu cpu3}% ${hwmon 3 temp 4}ºC
+Core 4: ${cpugraph cpu4 6,130}  $alignr${cpu cpu4}% ${hwmon 3 temp 5}ºC
 
 #CPU load$alignr ${cpu cpu0}%
 #${cpubar cpu0}
@@ -64,12 +65,12 @@ Core 4: ${cpugraph cpu4 6,100}  ${cpu cpu4}%
 Memory ${hr 2}
 
 Min / Max $alignr $mem / $memmax
-${membar 6, 160} $alignr$memperc%
+${membar 6, 220} $alignr$memperc%
 
 Battery ${hr 2}
  
-${if_match 100==$battery_percent}$alignr Full $endif${if_match 100>$battery_percent}$battery_status $alignr $battery_time$endif
-${battery_bar 6,160} $alignr$battery_percent%
+${if_match 100==$battery_percent}$alignr Full $endif${if_match 100>$battery_percent}$battery $alignr $battery_time$endif
+${battery_bar 6,220} $alignr$battery_percent%
 
 Top Processes ${hr 2}
 #$processes processes
@@ -84,16 +85,16 @@ ${top name 5} $alignr ${top cpu 5} ${top mem 5}
 Storage ${hr 2}
 
 Home: $alignr${fs_used /home} / ${fs_size /home}
-${fs_bar 6,160 /home} $alignr${fs_used_perc /home}%
+${fs_bar 6,220 /home} $alignr${fs_used_perc /home}%
 Data: $alignr${fs_used /mnt/Data} / ${fs_size /mnt/Data}
-${fs_bar 6,160 /mnt/Data} $alignr${fs_used_perc /mnt/Data}%
+${fs_bar 6,220 /mnt/Data} $alignr${fs_used_perc /mnt/Data}%
 
 wlp3s0 ${hr 2}
 
 Download:$alignr${downspeed wlp3s0}
-${downspeedgraph wlp3s0 10,200}
+${downspeedgraph wlp3s0 10,260}
 Upload: $alignr${upspeed wlp3s0}
-${upspeedgraph wlp3s0 10,200} 
+${upspeedgraph wlp3s0 10,260} 
 
 ]];
 
